--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,9 +12,14 @@ setuptools==75.8.0
 wheel>=0.42.0
 pywebview==5.4
 langchain-openai==0.3.1
+langchain-core>=0.2.0
+
 python-dotenv>=1.0.0
 asyncio==3.4.3 
-pydantic>=2.10.4
+pydantic>=2.10.4  
+pydantic-settings==2.2.1
+pydantic-extra-types==2.1.0
+
 playwright==1.49.0
 browser_use==0.1.40
 aiosqlite==0.19.0
