--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,22 +1,27 @@
 fastapi==0.109.1
 uvicorn==0.27.1
 python-dotenv==1.0.1
-pydantic==2.6.1
 sqlalchemy==2.0.27
 alembic==1.13.1
 pytest==8.0.0
-httpx==0.26.0
+httpx==0.27.2
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.9 
-setuptools==65.5.0
+setuptools==75.8.0
 wheel>=0.42.0
 pywebview==5.4
-langchain-openai==0.0.5
+langchain-openai==0.3.1
+langchain-core>=0.2.0
+
 python-dotenv>=1.0.0
-asyncio==3.4.3
-browser-use
-pydantic
+asyncio==3.4.3 
+pydantic>=2.10.4  
+pydantic-settings==2.2.1
+pydantic-extra-types==2.1.0
+
+playwright==1.49.0
+browser_use==0.1.40
 aiosqlite==0.19.0
 
 # Logging package
